Removed the extra Ajax call from the userInfo session. Also fixed the display of both login form and logoutbutton. Problem is that still the display is flickering because of the script generated content.

--- a/css/main.css
+++ b/css/main.css
@@ -125,3 +125,12 @@ color: azure;
 
 
 
+
+#UserExit {
+
+display: none;
+}
+
+#UserEnter {
+    display:none;
+}
